[gd_scene load_steps=3 format=3 uid="uid://main_001"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(100, 600)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Player" parent="." instance=ExtResource("uid://bvxqy8n7qk3xr")]
position = Vector2(100, 300)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2(0, 0)
scroll_base_scale = Vector2(1, 1)

[node name="BackgroundLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/BackgroundLayer"]
position = Vector2(0, 300)
scale = Vector2(4, 4)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -40.0
text = "Score: 0"

[node name="WeaponLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -20.0
text = "Weapon: Minigun"

[node name="AmmoLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 0.0
text = "Ammo: 999"

[node name="HealthBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 40.0
max_value = 100.0
value = 100.0

[node name="ArmorBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = 70.0
max_value = 50.0
value = 50.0

[node name="ShieldBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 100.0

max_value = 100.0
value = 0.0

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = false

[node name="LevelEnd" type="Area2D" parent="."]
position = Vector2(3000, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelEnd"]
shape = SubResource("RectangleShape2D_1")